--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -1,4 +1,5 @@
  <header>
+     <a href="{% url 'home' %}">Blog</a>
       <a href="{% url 'home' %}">Home</a>
       <a href="{% url 'home' %}">About</a>
     </header>
